--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,35 @@
 	"version": "1.0.0",
 	"description": "Desafio Fase 1 Pos360 (Server) - Rocketseat",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
-		"dev": "node --experimental-strip-types --watch --no-warnings src/infra/http/server.ts",
+		"dev": "node --experimental-strip-types --watch --env-file .env --no-warnings src/infra/http/server.ts",
+		"db:generate": "drizzle-kit generate",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"packageManager": "pnpm@10.11.1"
+	"packageManager": "pnpm@10.11.1",
+	"dependencies": {
+		"@fastify/cors": "^11.0.1",
+		"@fastify/swagger": "^9.5.1",
+		"@scalar/fastify-api-reference": "^1.31.8",
+		"drizzle-orm": "^0.44.2",
+		"fastify": "^5.3.3",
+		"fastify-type-provider-zod": "^4.0.2",
+		"postgres": "^3.4.7",
+		"ts-node": "^10.9.2",
+		"tsc-alias": "^1.8.16",
+		"uuidv7": "^1.0.2",
+		"zod": "^3.25.56"
+	},
+	"devDependencies": {
+		"@types/node": "^22.15.30",
+		"drizzle-kit": "^0.31.1",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.8.3"
+	}
 }
