--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,12 @@
 	"license": "ISC",
 	"packageManager": "pnpm@10.11.1",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.826.0",
+		"@aws-sdk/lib-storage": "^3.826.0",
 		"@fastify/cors": "^11.0.1",
 		"@fastify/swagger": "^9.5.1",
 		"@scalar/fastify-api-reference": "^1.31.8",
+		"csv-stringify": "^6.5.2",
 		"drizzle-orm": "^0.44.2",
 		"fastify": "^5.3.3",
 		"fastify-type-provider-zod": "^4.0.2",
